--- a/templates/biodata_mahasiswa.html
+++ b/templates/biodata_mahasiswa.html
@@ -1,5 +1,8 @@
+{% load static %}
 <html>
     <head>
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        
         <title>Biodata Mahasiswa UZ</title>
     </head>
     <body>
@@ -62,4 +65,6 @@
             <button type="submit">Kirim</button>
         </form>
     </body>
+
+    <script src="{% static 'js/script.js' %}"></script>
 </html>
