--- a/templates/biodata_mahasiswa.html
+++ b/templates/biodata_mahasiswa.html
@@ -64,6 +64,9 @@
             <br>
             <button type="submit">Kirim</button>
         </form>
+
+        {% comment %} Contoh Template Variable {% endcomment %}
+        {{ nama_gue }}
     </body>
 
     <script src="{% static 'js/script.js' %}"></script>
